# cognu-mach

./: .cppcheck-suppressions  .cursorrules  .gitignore  =announce-oskit-mach-1.2.90  CLAUDE.MD  CMakeLists.txt  CONTRIBUTING.md  ChangeLog  ChangeLog.gdb  ChangeLog.oskit  Makefile.am  Makefile.in  Makefile.in.orig  Makefrag.am  Makerules.mig.am  QUICK_FIXES_IMPLEMENTED.md  README  README.md  acconfig.h  compiler-warnings.txt  config.h.in  configfrag.ac  configure  configure.ac  configure.in  cursor_analyze_codebase_and_suggest_nex.md  final_test.c  gnumach-doc.md  issue_temp_kern.md  open-issues-gnumach.md  phase2-validation-test  test_conflict.c  test_conflict2.c  test_duplicate.c  test_typedef.c  test_vm_map_optimization.c  version.c
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: README.md  config.yml  kernel_feature.yaml  new-developer-onboarding.yaml  phase1_issue.yaml  phase2_issue.yaml  phase3_issue.yaml  phase4_issue.yaml
.github/workflows/: README.md  build-test-i686.yml  build-test-x86_64.yml  build-test.yml  build-test.yml.deprecated  ci-cd.yml  ci.yml  generate-kernel-feature-issue.yml  release.yml
alpha/: Files  Makefrag  Subdirs
alpha/alpha/: alpha_copyin.S  alpha_cpu.S  alpha_init.c  alpha_instruction.c  alphaasm.sym  ast.h  context.S  context.h  cpu_number.h  locore.S  machspl.h  pcb.c  pmap.c  pmap.h  prom_interface.h  (+5 more)
analysis-reports/: compiler-warnings.txt  configure-warnings.txt  cppcheck-report.txt  debug-analysis.txt
bogus/: cpus.h  mach_machine_routines.h
build-fresh/: Makefile  config.status  gnumach-undef
build-i686/: Makefile  config.h  config.status  config.status.orig
build-i686-debug/: Makefile  config.status
build-x86_64/: Makefile  config.h  config.status  gnumach  gnumach-undef  gnumach.msgids
ddb/: db_variables.h
debian/: README.Debian  changelog  control  copyright  rules
device/: cons.c  dev_hdr.h  dev_lookup.c  dev_pager.c  device_error_reply.cli  device_init.c  device_types_kernel.h  ds_routines.c  ds_routines.h  if_hdr.h  intr.c  intr.h  io_validation.c  irq.c  modern.c  modern.h  net_io.c  userspace_driver.c  userspace_driver.h  userspace_driver_sdk.c  virtio.c  virtio_blk.c  virtio_net.c  virtio_pci.c
doc/: 250808 actionable plan.yaml  console-timestamps.md  debugging-qemu-gdb.md  mach.texi
docs/: README.md  architecture-overview.md  boot-and-modules.md  debugger-and-profiling.md  debugging-guide.md  device-interface.md  external-memory-management.md  host-interface.md  ipc.md  phase1-quick-fixes.md  scheduling-and-processors.md  threads-and-tasks.md  vdso-implementation.md  virtual-memory.md
i386/: Files  Makefrag  Makefrag.am  Subdirs  ldscript
include/: gdb_stub.h
ipc/: copy_user.c  fipc.c  ipc_entry.c  ipc_hash.c  ipc_hash.h  ipc_kmsg.c  ipc_object.h  ipc_port.h  mach_msg.c  mach_port.c
kern/: act.c  assert.h  atomspace.c  atomspace.h  bootstrap.c  cfi_integrity.c  constants.h  cpu_number.h  debug.c  debug.h  development_tools.c  dtrace.c  dtrace.h  dynamic_probes.c  elf-load.c  eventcount.c  gdb.c  gdb_stub.c  instrumentation_integration.c  instrumentation_integration.h  ipc_host.c  ipc_kobject.c  ipc_mig.c  ipc_perf_monitor.c  ipc_tt.c  kalloc.c  kalloc_enhanced.c  kernel_feature_server.c  list.h  lock.c  lock_mon.c  lttng.c  mach_clock.c  mach_clock.h  machine.c  mem_optimize.c  mem_optimize.h  mem_track.c  mem_track.h  microkernel_optimizations.c  (+43 more)
mig/: Makefile  Makefile.in  config.status  configure  cpu.h  cpu.symc  mig  migcom  parser.c  parser.h
oskit/: ds_asyncio.c  ds_block.c  ds_bus.c  ds_mem.c  ds_net.c  ds_osenv.c  ds_oskit.h  ds_partition.c  ds_request.c  ds_request.h  ds_routines.c  ds_stream.c  kmsg.c  osenv_irq.c  osenv_log.c  osenv_mem.c  osenv_sleep.c  osenv_softirq.c  osenv_synch.c  smp-glue.c
phase4-validation-results/: phase4-validation-report.txt
scripts/: ci-build.sh  comprehensive-system-test.sh  dev-setup-wsl.sh  fix-mig-64bit.sh  mig-wrapper.sh  run-static-analysis.sh  security-vulnerability-scanner.sh  setup-qemu-gdb.sh  validate-documentation.sh
test/: test_all.cpp
tests/: test-console-timestamp.c  test-console-timestamps.c  test-ipc-large.c  test-ontogenesis.c  test-vm-boundary.c  test-vm-fault.c  test_cli.sh  testlib.c  user-qemu.mk
tools/: Makefile
vm/: memory_object.c  vm_block_cache.c  vm_debug.c  vm_fault.c  vm_fault.h  vm_map.c  vm_map.h  vm_object.c  vm_object.h  vm_object_verify.c  vm_object_verify.h  vm_page.c  vm_page.h  vm_pageout.c  vm_resident.c  vm_user.c
x86_64/: Makefrag.am  _setjmp.S  configfrag.ac  cswitch.S  debug_trace.S  idt_inittab.S  ldscript  locore.S  spl.S  xen_boothdr.S  xen_locore.S
xen/: block.c  evt.c  net.c
(+144 files in other folders)
